# voxel-engine

./: .gitmodules  CMakeLists.txt  Makefile  README.md  imgui.ini
include/voxedit/: editor.hpp
include/voxedit/tabs/: debug.hpp  editor_tab.hpp  hierarchy.hpp  inspector.hpp  viewport.hpp
include/voxelengine/: engine.hpp  vertex_data.hpp
include/voxelengine/block/: block.hpp  block_type.hpp
include/voxelengine/components/: camera.hpp  chunk.hpp  component.hpp  mesh.hpp  script.hpp  transform.hpp
include/voxelengine/error_handling/: gl_error.hpp
include/voxelengine/framebuffer/: framebuffer.hpp
include/voxelengine/input_manager/: input_manager.hpp  key_codes.hpp  key_event.hpp  mouse_event.hpp
include/voxelengine/log/: debug_logging.hpp  logger.hpp
include/voxelengine/material/: material.hpp
include/voxelengine/math/: quaternion.hpp  vec2.hpp  vec3.hpp
include/voxelengine/object/: object.hpp
include/voxelengine/path_builder/: path_builder.hpp
include/voxelengine/renderbuffer/: renderbuffer.hpp
include/voxelengine/renderer/: renderer.hpp
include/voxelengine/resource/: resource.hpp  texture_image.hpp
include/voxelengine/scripting_engine/: lua_function.hpp  lua_table.hpp  scripting_engine.hpp
include/voxelengine/shader/: shader.hpp
include/voxelengine/texture/: texture.hpp
include/voxelengine/time/: time.hpp
include/voxelengine/utilities/: object_primitives.hpp  procedural_mesh.hpp  procedural_world.hpp
include/voxelengine/voxel_engine/: voxel_engine.hpp
include/voxelengine/voxel_window/: voxel_window.hpp
include/voxelengine/world/: world.hpp
shaders/default/: default.frag  default.vert
src/: CMakeLists.txt  main.cpp
src/components/: component.cpp  mesh.cpp
src/core/block/: block.cpp
src/core/components/: camera.cpp  chunk.cpp  mesh.cpp  script.cpp  transform.cpp
src/core/error_handling/: gl_error.cpp
src/core/framebuffer/: framebuffer.cpp
src/core/input_manager/: input_manager.cpp  key_event.cpp  mouse_event.cpp
src/core/log/: logger.cpp
src/core/material/: material.cpp
src/core/object/: object.cpp
src/core/path_builder/: path_builder.cpp
src/core/renderbuffer/: renderbuffer.cpp
src/core/renderer/: renderer.cpp
src/core/resource/: resource.cpp
src/core/scripting_engine/: lua_function.cpp  lua_table.cpp  scripting_engine.cpp
src/core/shader/: shader.cpp
src/core/texture/: texture.cpp
src/core/time/: time.cpp
src/core/utilities/: object_primitives.cpp  procedural_mesh.cpp  procedural_world.cpp
src/core/voxel_engine/: voxel_engine.cpp
src/core/voxel_window/: voxel_window.cpp
src/core/world/: world.cpp
src/editor/: editor.cpp
src/editor/tabs/: debug.cpp  hierarchy.cpp  inspector.cpp  viewport.cpp
src/error_handling/: gl_error.cpp
src/input_manager/: input_manager.cpp  key_event.cpp
src/material/: material.cpp
src/object/: object.cpp
src/renderer/: renderer.cpp
src/shader/: shader.cpp
src/voxel_engine/: voxel_engine.cpp
src/voxel_window/: voxel_window.cpp  voxel_window.hpp
src/voxelwindow/: voxelwindow.cpp  voxelwindow.hpp
